add some eslint and prettier configuration

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
+  "printWidth": 120,
   "semi": false,
-  "trailingComma": "all",
   "singleQuote": true,
-  "printWidth": 70
+  "tabWidth": 2,
+  "trailingComma": "es5",
+  "arrayBracketSpacing": 2
 }
