--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint src/**/*.js src/**/*.jsx"
   },
-  "keywords": [],
+  "keywords": [
+    "hooks",
+    "useCombinedReducers",
+    "useReducer",
+    "context"
+  ],
   "author": "Nick Coleman <nick@nickcoleman.io",
   "license": "MIT",
+  "dependencies": {},
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.2.2",
@@ -27,6 +33,7 @@
     "eslint-config-ncoleman": "^1.6.4",
     "mocha": "^6.1.4",
     "nyc": "^14.1.1",
+    "sinon": "^7.3.2",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2"
   },
@@ -37,8 +44,5 @@
   "bugs": {
     "url": "https://github.com/nickcoleman/hook-use-combined-reducers/issues"
   },
-  "homepage": "https://github.com/nickcoleman/hook-use-combined-reducers#readme",
-  "dependencies": {
-    "sinon": "^7.3.2"
-  }
+  "homepage": "https://github.com/nickcoleman/hook-use-combined-reducers#readme"
 }
