--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,12 @@
 {
-  "extends": "ncoleman",
+  "extends": "airbnb",
   "rules": {
     "semi": ["warn", "never"],
+    "arrow-parens": "off",
+    "implicit-arrow-linebreak": "off",
     "max-len": [
       "warn",
-      120,
+      100,
       2,
       {
         "ignoreUrls": true,
