--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prepare": "npm run build",
     "test": "nyc mocha --require @babel/register 'src/**/**index.test.js'",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "lint": "eslint src/**/*.js src/**/*.jsx"
+    "lint": "eslint src/**/*.js"
   },
   "keywords": [
     "hooks",
@@ -30,7 +30,11 @@
     "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
     "coveralls": "^3.0.3",
-    "eslint-config-ncoleman": "^1.6.4",
+    "eslint": "5.3.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.0",
     "mocha": "^6.1.4",
     "nyc": "^14.1.1",
     "sinon": "^7.3.2",
