update package description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nickcoleman/use-combined-reducers",
   "version": "1.0.19",
-  "description": "hook alternative to redux combineReducers()",
+  "description": "hook to combine multiple useReducers() -- hook alternative to redux combineReducers()",
   "private": false,
   "main": "lib/index.js",
   "scripts": {
